--- a/API/requirements.txt
+++ b/API/requirements.txt
@@ -1,6 +1,7 @@
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
+DateTime==4.3
 dnspython==2.1.0
 fastapi==0.63.0
 Flask==1.1.2
@@ -13,8 +14,10 @@ MarkupSafe==1.1.1
 pydantic==1.7.3
 pymongo==3.11.2
 python-decouple==3.4
+pytz==2020.5
 requests==2.25.1
 starlette==0.13.6
 urllib3==1.26.3
 uvicorn==0.13.3
 Werkzeug==1.0.1
+zope.interface==5.2.0
