--- a/API/requirements.txt
+++ b/API/requirements.txt
@@ -20,6 +20,7 @@ pandas==1.2.1
 pandas-datareader==0.9.0
 plotly==4.14.3
 pydantic==1.7.3
+PyJWT==1.7.1
 pymongo==3.11.2
 PySocks==1.7.1
 python-dateutil==2.8.1
@@ -38,6 +39,7 @@ textblob==0.15.3
 threadpoolctl==2.1.0
 tqdm==4.56.0
 tweepy==3.10.0
+twilio==6.51.1
 urllib3==1.26.3
 uvicorn==0.13.3
 Werkzeug==1.0.1
