--- a/API/requirements.txt
+++ b/API/requirements.txt
@@ -1,6 +1,7 @@
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
+cycler==0.10.0
 DateTime==4.3
 dnspython==2.1.0
 fastapi==0.63.0
@@ -11,17 +12,21 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 joblib==1.0.0
 jsonify==0.5
+kiwisolver==1.3.1
 lxml==4.6.2
 MarkupSafe==1.1.1
+matplotlib==3.3.4
 nltk==3.5
 numpy==1.19.5
 oauthlib==3.1.0
 pandas==1.2.1
 pandas-datareader==0.9.0
+Pillow==8.1.0
 plotly==4.14.3
 pydantic==1.7.3
 PyJWT==1.7.1
 pymongo==3.11.2
+pyparsing==2.4.7
 PySocks==1.7.1
 python-dateutil==2.8.1
 python-decouple==3.4
@@ -32,6 +37,7 @@ requests-oauthlib==1.3.0
 retrying==1.3.3
 scikit-learn==0.24.1
 scipy==1.6.0
+seaborn==0.11.1
 six==1.15.0
 sklearn==0.0
 starlette==0.13.6
