--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "framer-motion": "^3.2.2-rc.1",
+    "i18next": "^19.8.5",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "i18next-xhr-backend": "^3.2.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.2",
     "react-dom": "^16.13.1",
+    "react-i18next": "^11.8.5",
+    "react-intl": "^5.10.19",
     "react-markdown": "^4.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
