--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "chart.js": "^2.9.4",
     "framer-motion": "^3.2.2-rc.1",
     "i18next": "^19.8.5",
     "i18next-browser-languagedetector": "^6.0.1",
